# haskell-utility

./: .gitignore  LICENSE  README.md  package.yaml  stack.yaml  utility.cabal
.circleci/: config.yml
.github/workflows/: build.yml
src/: Utility.hs
test/: UtilitySpec.hs  doctests.hs
