cabal-version: 2.2

name:           utility
version:        0.1.0.0
homepage:       https://github.com/cohei/haskell-utility#readme
bug-reports:    https://github.com/cohei/haskell-utility/issues
author:         TANIGUCHI Kohei
maintainer:     a.d.xvii.kal.mai@gmail.com
copyright:      2018 TANIGUCHI Kohei
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/cohei/haskell-utility

common warning
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wmissing-import-lists
    -Wmissing-local-signatures
    -Wmonomorphism-restriction
    -Wpartial-fields
    -Wredundant-constraints
    -fdefer-typed-holes

library
  import: warning
  exposed-modules:
      Utility
  hs-source-dirs:
      src
  ghc-options: -O0
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

test-suite doctest
  import: warning
  type: exitcode-stdio-1.0
  main-is: doctests.hs
  hs-source-dirs:
      test
  build-depends:
      base >=4.7 && <5
    , doctest
  default-language: Haskell2010

test-suite hspec
  import: warning
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      UtilitySpec
  hs-source-dirs:
      test
  build-tool-depends:
      hspec-discover:hspec-discover
  build-depends:
      base >=4.7 && <5
    , hspec
    , utility
  default-language: Haskell2010
